updated enums: Country, VisaType,  added Main java file, updated RuleLoader.java file

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,18 @@
             <version>2.10.1</version>
         </dependency>
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.visaRuleEngine.Main</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
